# lexia

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.xml
src/: main.cc  main.cpp
src/logging/: logger.cc  logger.cpp  logger.h
